syntax = "proto3";

                 package userTimeOffRequest;
service UserTimeOffRequestService {
 rpc createUserTimeOffRequest (UserTimeOffRequestCreateInput) returns (UserTimeOffRequest) {}
rpc userTimeOffRequests (findManyParams) returns (stream UserTimeOffRequest) {}
rpc userTimeOffRequest (UserTimeOffRequestWhereUniqueInput) returns (UserTimeOffRequest) {}
rpc updateUserTimeOffRequest (UserTimeOffRequestUpdateInput) returns (UserTimeOffRequest) {}
rpc deleteUserTimeOffRequest (UserTimeOffRequestWhereUniqueInput) returns (UserTimeOffRequest) {} 
 }
message UserTimeOffRequestCreateInput {
string id = 1;
string note = 2;
int32 numDays = 3;
string periodEnd = 4;
string periodStart = 5;
int32 status = 6;
};
message UserTimeOffRequest {
string id = 1;
string note = 2;
int32 numDays = 3;
string periodEnd = 4;
string periodStart = 5;
int32 status = 6;
};
message UserTimeOffRequestWhereUniqueInput {
string id = 1;
string note = 2;
int32 numDays = 3;
string periodEnd = 4;
string periodStart = 5;
int32 status = 6;
};
message UserTimeOffRequestUpdateInput {
string id = 1;
string note = 2;
int32 numDays = 3;
string periodEnd = 4;
string periodStart = 5;
int32 status = 6;
};
message findManyParams {

};